update email button

--- a/index.html
+++ b/index.html
@@ -42,7 +42,7 @@
         <h2>Get In Touch</h2>
         <h3>I'm currently available for freelance work.</h3>
         <p class="contact-bio">If you have a project that you want to get started, think you might need my help with something then please don't hesitate contacting me.</p>
-        <a class="btn" href="mailto:danielghenry@live.com">CONTACT ME</a>
+        <a class="btn" href="danielghenry@live.com">CONTACT ME</a>
       </div>
     </div>
 
